--- a/01_agama/samyukta/01/SA1_146.md
+++ b/01_agama/samyukta/01/SA1_146.md
@@ -14,51 +14,51 @@ next: SA1_147.html
   <th class='ch'>（三四） 五比丘</th>
   <th class='en'>146 (34). Five Monks</th>
   <tr>
-    <td class="ch" title='t99.2.7c13'>如是我聞： 一時，佛住波羅㮈國、仙人住處、鹿野苑中。</td>
+    <td class='ch' title='t99.2.7c13'>如是我聞： 一時，佛住波羅㮈國、仙人住處、鹿野苑中。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Residence of Sages in the Deer Preserve of Bārāṇasī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.7c14'>爾時，世尊告餘五比丘： 「色非有我。 若色有我者，於色不應病、苦生，亦不得於色欲：『令如是、不令如是』。 以色無我故，於色有病、有苦生，亦得於色欲：『令如是、不令如是』。 受、想、行、識亦復如是。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the other five monks, “Form doesn’t have a self. If form had a self, it wouldn’t be that illness and pain arise from form, and there wouldn’t be these desires about form: ‘Let it be so; let it not be so.’ Because form has no self, illness and pain that arise from it, and these desires become possible: ‘Let it be so; let it not be so.’ <em>Feeling, conception, volition, and awareness are likewise.</em></td>
+    <td class='ch' title='t99.2.7c14'>爾時，世尊告餘五比丘： 「色非有我。 若色有我者，於色不應病、苦生，亦不得於色欲：『令如是、不令如是』。 以色無我故，於色有病、有苦生，亦得於色欲：『令如是、不令如是』。 受、想、行、識亦復如是。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the other five monks, “Form doesn’t have a self. If form had a self, it wouldn’t be that illness and pain arise from form, and there wouldn’t be these desires about form: ‘Let it be so; let it not be so.’ Because form has no self, illness and pain that arise from it, and these desires become possible: ‘Let it be so; let it not be so.’ Feeling, conception, volition, and awareness are likewise.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.7c19'>「比丘，於意云何？ 色為是常，為無常耶？」</td>
+    <td class='ch' title='t99.2.7c19'>「比丘，於意云何？ 色為是常，為無常耶？」</td>
     <td id='p3'>3. “Monks, what do you think? Is form permanent, or is it impermanent?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.7c19'>比丘白佛： 「無常，世尊。」</td>
+    <td class='ch' title='t99.2.7c19'>比丘白佛： 「無常，世尊。」</td>
     <td>The monks said to the Buddha, “Impermanent, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.7c20'>「比丘，若無常者，是苦耶？」</td>
+    <td class='ch' title='t99.2.7c20'>「比丘，若無常者，是苦耶？」</td>
     <td id='p4'>4. “Monks, if something is impermanent, is it painful?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.7c21'>比丘白佛： 「是苦，世尊。」</td>
+    <td class='ch' title='t99.2.7c21'>比丘白佛： 「是苦，世尊。」</td>
     <td>The monks said to the Buddha, “It’s painful, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.7c21'>「比丘！若無常、苦，是變易法。 多聞聖弟子寧於中見是我、異我、相在不？」</td>
+    <td class='ch' title='t99.2.7c21'>「比丘！若無常、苦，是變易法。 多聞聖弟子寧於中見是我、異我、相在不？」</td>
     <td id='p5'>5. “If it’s impermanent and painful, it’s liable to change. Given that, Would a well-versed noble disciple see form as having self, as being other than self, or that either form or self is present in the other?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.7c23'>比丘白佛： 「不也，世尊。」</td>
+    <td class='ch' title='t99.2.7c23'>比丘白佛： 「不也，世尊。」</td>
     <td>The monks said to the Buddha, “No, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.7c23'>「受、想、行、識亦復如是。 是故，比丘，諸所有色，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、非我所。 如實觀察。 受、想、行、識亦復如是。</td>
-    <td id='p6'>6. “<em>Feeling, conception, volition, and awareness are likewise.</em> Therefore, monks, whatever forms exist, whether in the past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self and don’t belong to a self. Observe them in this way. <em>Feeling, conception, volition, and awareness are likewise.</em></td>
+    <td class='ch' title='t99.2.7c23'>「受、想、行、識亦復如是。 是故，比丘，諸所有色，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、非我所。 如實觀察。 受、想、行、識亦復如是。</td>
+    <td id='p6'>6. “Feeling, conception, volition, and awareness are likewise. Therefore, monks, whatever forms exist, whether in the past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self and don’t belong to a self. Observe them in this way. Feeling, conception, volition, and awareness are likewise.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.7c27'>「比丘！多聞聖弟子於此五受陰見非我、非我所。 如是觀察，於諸世間都無所取。 無所取故，無所著。 無所著故，自覺涅槃： 『我生已盡，梵行已立，所作已作。 自知不受後有。』」</td>
-    <td id='p7'>7. “Monks, a well-versed noble disciple sees that what’s in these five acquired aggregates is not self and doesn’t belong to a self. Observing them in this way, they take hold of nothing from all the world. Because they take hold of nothing, they have no attachments. Because they have no attachments, they realize <em>nirvāṇa</em> for themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”</td>
+    <td class='ch' title='t99.2.7c27'>「比丘！多聞聖弟子於此五受陰見非我、非我所。 如是觀察，於諸世間都無所取。 無所取故，無所著。 無所著故，自覺涅槃： 『我生已盡，梵行已立，所作已作。』 自知不受後有。」</td>
+    <td id='p7'>7. “Monks, a well-versed noble disciple sees that what’s in these five acquired aggregates is not self and doesn’t belong to a self. Observing them in this way, they take hold of nothing from all the world. Because they take hold of nothing, they have no attachments. Because they have no attachments, they realize <em>nirvāṇa</em> for themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished.’ They themselves know they won’t be subject to a later existence.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.8a2'>佛說此經已，餘五比丘不起諸漏，心得解脫。</td>
+    <td class='ch' title='t99.2.8a2'>佛說此經已，餘五比丘不起諸漏，心得解脫。</td>
     <td id='p8'>8. After the Buddha spoke this <em>sūtra</em>, those five monks didn’t produce the contaminants, and their minds were liberated.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.8a3'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td class='ch' title='t99.2.8a3'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
     <td id='p9'>9. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
 </table>
@@ -68,7 +68,7 @@ next: SA1_147.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 34 in the <cite>Taisho</cite> edition and no. 146 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0007c13" target="_blank">T99.2.7c13-8a4</a>). This is the famous second sermon that the Buddha taught to his first five disciples according to the Mūlasarvāstivāda tradition. It’s parallel with <a href="https://suttacentral.net/sn22.59" target="_blank">SN 22.59</a> and <a href="../../other/T102.html" target="_blank">T102</a>, and <a href="SA1_143.html" target="_blank">SĀ 1.143</a>-<a href="SA1_145.html" target="_blank">145</a> are only slightly different variants of the same discourse. [<a href="#ref1">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 34 in the <cite>Taisho</cite> edition and no. 146 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0007c13" target="_blank">T99.2.7c13-8a4</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0139a04" target="_blank">Y30.139a4-15</a>). This is the famous second sermon that the Buddha taught to his first five disciples according to the Mūlasarvāstivāda tradition. It’s parallel with <a href="https://suttacentral.net/sn22.59" target="_blank">SN 22.59</a> and <a href="../../other/T102.html" target="_blank">T102</a>, and <a href="SA1_143.html" target="_blank">SĀ 1.143</a>-<a href="SA1_145.html" target="_blank">145</a> are only slightly different variants of the same discourse. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
