--- a/01_agama/samyukta/01/SA1_152.md
+++ b/01_agama/samyukta/01/SA1_152.md
@@ -14,35 +14,35 @@ next: SA1_153.html
   <th class='ch'>（四〇）封滯</th>
   <th class='en'>152 (40). Stagnation</th>
   <tr>
-    <td class="ch" title='t99.2.9a27'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.9a27'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.9a28'>爾時，世尊告諸比丘： 「封滯者不解脫，不封滯則解脫。 云何封滯不解脫？ 比丘，攀緣四取陰識住。 云何為四？ 色封滯識住⋯受⋯想⋯行封滯識住⋯</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Someone who is stagnated isn’t liberated, but when they aren’t stagnated, then they are liberated. How is someone stagnated not liberated? Monks, awareness abides in its substrates of four acquired aggregates. What are the four? Awareness abides stagnated in form. Awareness abides stagnated in feeling … conception … volition [as its substrate. Watered with greed and delight, it arises, grows, increases, and develops. Monks, whether while it’s coming, going, remaining, disappearing, or arising, awareness arises, grows, increases, and develops.]<sup id="ref1"><a href="#n1">1</a></sup></td>
+    <td class='ch' title='t99.2.9a28'>爾時，世尊告諸比丘： 「封滯者不解脫，不封滯則解脫。 云何封滯不解脫？ 比丘，攀緣四取陰識住。 云何為四？ 色封滯識住⋯受⋯想⋯行封滯識住⋯</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Someone who is stagnated isn’t liberated, but when they aren’t stagnated, then they are liberated. How is someone stagnated not liberated? Monks, awareness abides in its substrates of four acquired aggregates. What are the four? Awareness abides stagnated in form. Awareness abides stagnated in feeling … conception … volition [as its substrate. Watered with greed and delight, it arises, grows, increases, and develops. Monks, whether while it’s coming, going, remaining, disappearing, or arising, awareness arises, grows, increases, and develops.]<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.9b2'>「⋯乃至⋯非境界故。 是名封滯，故不解脫。</td>
+    <td class='ch' title='t99.2.9b2'>「⋯乃至⋯非境界故。 是名封滯，故不解脫。</td>
     <td id='p3'>3. [“Monks, if someone claims awareness has come, gone, remained, ceased, or arisen apart from form, feeling, conception, and volition, that would only be an assertion. When questioned, they would not know it, and this would increase delusion] because it’s something that’s impossible. This is called someone not being liberated because they are stagnated.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.9b3'>「云何不封滯則解脫？ 於色界離貪⋯</td>
+    <td class='ch' title='t99.2.9b3'>「云何不封滯則解脫？ 於色界離貪⋯</td>
     <td id='p4'>4. “How is someone who isn’t stagnated then liberated? Part with greed for the domain of form. [After parting with that greed, the mental stagnation in form that produced bondage is ended. After that, the substrate of form is ended. After the substrate has ended, awareness has nowhere to dwell, and it doesn’t arise again, grow, increase, or develop.]</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.9b4'>「受⋯想⋯行⋯識離貪⋯</td>
+    <td class='ch' title='t99.2.9b4'>「受⋯想⋯行⋯識離貪⋯</td>
     <td id='p5'>5. “Part with greed for the domain of feeling … conception … volition. [After parting with that greed, the mental stagnation in volition that produced bondage is ended. After that, the substrate of volition is ended. After the substrate has ended, awareness has nowhere to dwell, and it doesn’t arise again, grow, increase, or develop.]</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.9b4'></td>
+    <td class='ch' title='t99.2.9b4'></td>
     <td id='p6'>6. [“Because it doesn’t arise and grow, volitions aren’t made. Once volitions aren’t made, then one abides. Having abided, one is satisfied. Once one is satisfied, they’re liberated. Once they’re liberated, they grasp nothing and attach to nothing in all the world. Once they grasp nothing and attach to nothing, they realize <em>nirvāṇa</em> for themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’]</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.9b4'>「⋯乃至⋯清淨真實。 是則不封滯則解脫。」</td>
+    <td class='ch' title='t99.2.9b4'>「⋯乃至⋯清淨真實。 是則不封滯則解脫。」</td>
     <td id='p7'>7. [“I say that their awareness doesn’t go east, west, south, north, to the four intercardinals, up, or down. It has no destination to which it goes. When they are about to enter <em>nirvāṇa</em>, it’s truly ceased, quenched, and] purified in the present life. This is someone being liberated because they are not stagnated.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.9b5'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td class='ch' title='t99.2.9b5'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
     <td id='p8'>8. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
 </table>
@@ -52,8 +52,8 @@ next: SA1_153.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 40 in the <cite>Taisho</cite> edition and no. 152 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0009a27" target="_blank">T99.2.9a27-b6</a>). It’s similar to <a href="SA1_151.html" target="_blank">SĀ 1.151</a> and <a href="https://suttacentral.net/sn22.53" target="_blank">SN 22.53</a> but simpler and with less emphasis on stagnation. See the notes to SĀ 1.151 for comments on keywords found in this <em>sūtra</em>. [<a href="#ref1">back</a>]</li>
-<li id="n1">The passages in brackets were abbreviated in the Chinese translation. I’ve expanded these abbreviations with the corresponding passages from the previous <em>sūtra</em> (SĀ 1.151). [<a href="#ref1">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 40 in the <cite>Taisho</cite> edition and no. 152 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0009a27" target="_blank">T99.2.9a27-b6</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0147a12" target="_blank">Y30.147a12-8a1</a>). It’s similar to <a href="SA1_151.html" target="_blank">SĀ 1.151</a> and <a href="https://suttacentral.net/sn22.53" target="_blank">SN 22.53</a> but simpler and with less emphasis on stagnation. See the notes to SĀ 1.151 for comments on keywords found in this <em>sūtra</em>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p>The passages in brackets were abbreviated in the Chinese translation. I’ve expanded these abbreviations with the corresponding passages from the previous <em>sūtra</em> (SĀ 1.151). [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
