--- a/01_agama/samyukta/01/SA1_44.md
+++ b/01_agama/samyukta/01/SA1_44.md
@@ -18,7 +18,7 @@ next: SA1_45.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> Venerable Ānanda was staying at Ghoṣila Park of Kauśāmbī.<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.66a6'>時，尊者阿難告諸比丘：「尊者富留那彌多羅尼子年少初出家時，常說深法，作如是言：『阿難！[3]生法計是我，非不生。阿難！云何於生法計是我，非不生？色生，生是我，非不生。受、想、行、識生，生是我，非不生。譬如士夫手執明鏡及淨水鏡，自見面生，生故見，非不生。是故，阿難！色生，生故計是我，非不生。如是受、想、行、識生，生故計是我，非不生。云何？阿難！色是常耶？為無常耶？』</td>
+    <td class='ch' title='t99.2.66a6'>時，尊者阿難告諸比丘：「尊者富留那彌多羅尼子年少初出家時，常說深法，作如是言：『阿難！生法計是我，非不生。阿難！云何於生法計是我，非不生？色生，生是我，非不生。受、想、行、識生，生是我，非不生。譬如士夫手執明鏡及淨水鏡，自見面生，生故見，非不生。是故，阿難！色生，生故計是我，非不生。如是受、想、行、識生，生故計是我，非不生。云何？阿難！色是常耶？為無常耶？』</td>
     <td id='p2'>2. Venerable Ānanda then addressed the monks, “When Venerable Pūrṇa Maitrāyaṇīputra<sup id="ref3"><a href="#n3">3</a></sup> was a junior who had recently left home, he often discussed the profound Dharma. He would say such things as this: ‘Ānanda, something that arises is considered to be self, not something that doesn’t arise. Ānanda, how is it that something that arises is considered to be self and not something that doesn’t arise? When form arises, that gives rise to self, not when it doesn’t arise. When feeling … conception … volition … awareness arises, that gives rise to self, not when it doesn’t arise. It’s like a man who sees his own face appear when he holds a bright mirror in his hand or when he looks at his reflection in clear water. He sees it because it appears, not because it doesn’t appear. Therefore, Ānanda, when form arises, that gives rise to self, not when it doesn’t arise. When feeling … conception … volition … awareness arises, that gives rise to self, not when it doesn’t arise. How is it, Ānanda? Is form permanent, or is it impermanent?’</td>
   </tr>
   <tr>
