--- a/01_agama/samyukta/01/SA1_46.md
+++ b/01_agama/samyukta/01/SA1_46.md
@@ -22,11 +22,11 @@ next: SA1_47.html
     <td id='p2'>2. It was then that the Buddha addressed the monks, “It was because of knowing and seeing that I reached the end of the contaminants, not because of not knowing or seeing. How was it because of knowing and seeing that I reached the end of the contaminants and not because of not knowing or seeing? I mean: ‘This is form, this is the formation of form, and this is the cessation of form. This is feeling … conception … volition … awareness, this is the formation of awareness, and this is the cessation of awareness.’</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.67a23'>不修方便隨順成就，而用心求：『[8]令我諸漏盡，心得解脫。』當知彼比丘終不能得漏盡解脫。所以者何？不修習故，不修[9]習何等？謂不修習念處、正勤、如意足、根、力、覺、道。</td>
+    <td class='ch' title='t99.2.67a23'>不修方便隨順成就，而用心求：『令我諸漏盡，心得解脫。』當知彼比丘終不能得漏盡解脫。所以者何？不修習故，不修習何等？謂不修習念處、正勤、如意足、根、力、覺、道。</td>
     <td id='p3'>3. “[Suppose] one doesn’t cultivate this method or follow through with it, and they apply their mind to this goal: ‘Let my contaminants come to an end and my mind be liberated.’ You should know that that monk will never be able to reach the end of the contaminants or be liberated. Why is that? Because he doesn’t train himself. What doesn’t he train himself in? He doesn’t train in the abodes of mindfulness, right effort, spiritual abilities, faculties, powers, factors of awakening, or the path.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.67a23'>「譬如伏鷄，生子眾多，不能隨時蔭[10]餾，消息冷暖，而欲令子以觜、以爪啄卵自生，安隱出㲉，當知彼子無有自力，堪能方便以觜、以爪安隱出㲉。所以者何？以彼雞母不能隨時蔭[＊]餾，冷暖長養子故。</td>
+    <td class='ch' title='t99.2.67a23'>「譬如伏鷄，生子眾多，不能隨時蔭餾，消息冷暖，而欲令子以觜、以爪啄卵自生，安隱出㲉，當知彼子無有自力，堪能方便以觜、以爪安隱出㲉。所以者何？以彼雞母不能隨時蔭餾，冷暖長養子故。</td>
     <td id='p4'>4. “He’s like a brooding hen that lays a clutch of eggs<sup id="ref3"><a href="#n3">3</a></sup> but can’t keep them warm at the proper times. She takes breaks when it’s too cold or hot, but she wants her chicks to use their beaks and claws to hatch themselves by pecking at their eggshells. You should know that her chicks won’t have the strength to break out of their shells with their beaks and claws. Why is that? Because that mother hen wasn’t able to keep them warm at the proper times when it was too cold or hot.”</td>
   </tr>
   <tr>
@@ -38,11 +38,11 @@ next: SA1_47.html
     <td id='p6'>6. “If a monk trains himself and follows through with it, then that monk’s contaminants will end naturally and his mind will become liberated, even if he doesn’t want that. Why is that? Because he trains himself. What does he train in? He trains in the abodes of mindfulness, right effort, spiritual abilities, faculties, powers, factors of awakening, and the path.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.67b6'>「如彼伏雞善養其子，隨時蔭[＊]餾，冷暖得所，[11]正復不欲令子方便自啄卵出，然其諸子自能方便安隱出㲉。所以者何？以彼伏雞隨時蔭餾，冷暖得所故。</td>
+    <td class='ch' title='t99.2.67b6'>「如彼伏雞善養其子，隨時蔭餾，冷暖得所，正復不欲令子方便自啄卵出，然其諸子自能方便安隱出㲉。所以者何？以彼伏雞隨時蔭餾，冷暖得所故。</td>
     <td id='p7'>7. “He’s like a brooding hen who is good at taking care of her chicks and keeps them warm at the appropriate times when it’s too cold or hot. Even if she doesn’t want her chicks to use their own beaks to hatch from their eggs, her chicks are still able to safely hatch themselves. Why is that? Because that brooding hen kept them warm at the appropriate times and did so when it was too cold or hot.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.67b16'>「如是，比丘善修方便，[＊]正復不欲漏盡解脫，而彼比丘自然漏盡，心得解脫。所以者何？以勤修習故。何所修習？謂修念處、正勤、如意足、根、力、覺、道。</td>
+    <td class='ch' title='t99.2.67b16'>「如是，比丘善修方便，正復不欲漏盡解脫，而彼比丘自然漏盡，心得解脫。所以者何？以勤修習故。何所修習？謂修念處、正勤、如意足、根、力、覺、道。</td>
     <td id='p8'>8. “Thus, a monk who is good at cultivating this method will naturally end the contaminants and his mind will become liberated even if he doesn’t want that. Why is that? Because he diligently trained himself. What did he train in? He trained in the abodes of mindfulness, right effort, spiritual abilities, faculties, powers, factors of awakening, and the path.</td>
   </tr>
   <tr>
