--- a/01_agama/samyukta/01/SA1_48.md
+++ b/01_agama/samyukta/01/SA1_48.md
@@ -30,11 +30,11 @@ next: SA1_49.html
     <td id='p4'>4. “Monks, suppose a clear-eyed man closely examines and discerns water bubbles that each appear and then disappear during a heavy rain. When he closely examines and discerns them, there is nothing there, no stability, no substance, and nothing solid. Why is that? Because there is no solid substance in the water bubbles.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.68c8'>「如是，比丘！諸所有受，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近。比丘！諦觀思惟分別。諦觀思惟分別時，無所有、無牢、無實、無有堅固，如病、如癰、如刺、如殺，無常、[17]苦、空、非我。所以者何？以受無堅實故。</td>
+    <td class='ch' title='t99.2.68c8'>「如是，比丘！諸所有受，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近。比丘！諦觀思惟分別。諦觀思惟分別時，無所有、無牢、無實、無有堅固，如病、如癰、如刺、如殺，無常、苦、空、非我。所以者何？以受無堅實故。</td>
     <td id='p5'>5. “So it is with whatever feelings that there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near. Monks, when they are closely examined, considered, and discerned, there is nothing there, no stability, no substance, and nothing solid. They are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self. Why is that? Because feelings have no solid substance.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.68c17'>「諸比丘！譬如春末夏初，無雲、無雨，日盛中時，[18]野馬流動，明目士夫諦觀思惟分別；諦觀思惟分別時，無所有、無牢、無實、無有堅固。所以者何？以彼野馬無堅實故。</td>
+    <td class='ch' title='t99.2.68c17'>「諸比丘！譬如春末夏初，無雲、無雨，日盛中時，野馬流動，明目士夫諦觀思惟分別；諦觀思惟分別時，無所有、無牢、無實、無有堅固。所以者何？以彼野馬無堅實故。</td>
     <td id='p6'>6. “Monks, suppose that at the end of spring or the beginning of summer a clear-eyed man closely examines, considers, and discerns [the dust of] wild horses drifting on a sunny day without clouds or rain.<sup id="ref3"><a href="#n3">3</a></sup> When he closely examines and discerns it, there is nothing there, no stability, no substance, and nothing solid. Why is that? There is no solid substance in [that dust of] wild horses.</td>
   </tr>
   <tr>
@@ -42,7 +42,7 @@ next: SA1_49.html
     <td id='p7'>7. “So it is with whatever conceptions that there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near. Monks, when they are closely examined, considered, and discerned, there is nothing there, no stability, no substance, and nothing solid. They are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self. Why is that? Because conceptions have no solid substance.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.68c25'>「諸比丘！譬如明目士夫求堅固材，執持利斧，入於山林，見大[19]芭蕉樹，𦟛直長大，即伐其根，斬截其峯，葉葉次剝，都無堅實，諦觀思惟分別。諦觀思惟分別[20]時，無所有、無牢、無實、無有堅固。所以者何？以彼芭蕉無堅實故。</td>
+    <td class='ch' title='t99.2.68c25'>「諸比丘！譬如明目士夫求堅固材，執持利斧，入於山林，見大芭蕉樹，𦟛直長大，即伐其根，斬截其峯，葉葉次剝，都無堅實，諦觀思惟分別。諦觀思惟分別時，無所有、無牢、無實、無有堅固。所以者何？以彼芭蕉無堅實故。</td>
     <td id='p8'>8. “Monks, suppose a clear-eyed man goes searching for a hardwood tree with an axe in hand. He goes into a mountain forest and sees a large plantain tree that’s balanced, straight, and huge. He attacks its root, chopping it at its peak. He strips off its leaves one after another, but it has no solid core when it’s closely examined, considered, and discerned. When he closely examines, considers, and discerns it, there is nothing there, no stability, no substance, and nothing solid. Why is that? Because there is no solid substance in that plantain tree.</td>
   </tr>
   <tr>
@@ -50,7 +50,7 @@ next: SA1_49.html
     <td id='p9'>9. “So it is with whatever volitions that there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near. Monks, when they are closely examined, considered, and discerned, there is nothing there, no stability, no substance, and nothing solid. They are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self. Why is that? Because volitions have no solid substance.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.69a7'>「諸比丘！譬如[1]幻師、若幻師弟子，於四衢道頭，幻作象兵、馬兵、車兵、步兵，有智明目士夫諦觀思惟分別；諦觀思惟分別時，無所有、無牢、無實、無有堅固。所以者何？以彼幻無堅實故。</td>
+    <td class='ch' title='t99.2.69a7'>「諸比丘！譬如幻師、若幻師弟子，於四衢道頭，幻作象兵、馬兵、車兵、步兵，有智明目士夫諦觀思惟分別；諦觀思惟分別時，無所有、無牢、無實、無有堅固。所以者何？以彼幻無堅實故。</td>
     <td id='p10'>10. “Monks, suppose an intelligent and clear-eyed man closely examines, considers, and discerns a troop of elephants, cavalry, chariots, or foot soldiers conjured at the head of a crossroads by an illusionist or an illusionist’s apprentice. When he closely examines, considers, and discerns them, there is nothing there, no stability, no substance, and nothing solid. Why is that? Because there is no solid substance in those illusions.</td>
   </tr>
   <tr>
@@ -66,7 +66,7 @@ next: SA1_49.html
     <li class='ch'>
 「觀色如聚沫，<br/>
     受如水上泡，<br/>
-    想如春時[2]燄，<br/>
+    想如春時燄，<br/>
     諸行如芭蕉，<br/>
     諸識法如幻，<br/>
     日種姓尊說。</li>
@@ -119,7 +119,7 @@ next: SA1_49.html
 <tr>
   <td title='t99.2.xxxx'><ul class='verse'>
     <li class='ch'>此身常如是，<br/>
-    幻[3]為誘愚夫。<br/>
+    幻為誘愚夫。<br/>
     如殺如毒刺，<br/>
     無有堅固者。</li>
   </ul></td>
