--- a/01_agama/samyukta/01/SA1_52.md
+++ b/01_agama/samyukta/01/SA1_52.md
@@ -74,7 +74,7 @@ next: SA1_53.html
     <td>They answered, “No, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.70b20'>「比丘！是故諸所有色，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。如是受、想、行、識，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。聖弟子觀此五受陰非[5]我、我所。如是觀時，於諸世間無所取著；無所取著者，自得涅槃：『我生已盡，梵行已立，所作已作。』自知不受後有。」</td>
+    <td class='ch' title='t99.2.70b20'>「比丘！是故諸所有色，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。如是受、想、行、識，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。聖弟子觀此五受陰非我、我所。如是觀時，於諸世間無所取著；無所取著者，自得涅槃：『我生已盡，梵行已立，所作已作。』自知不受後有。」</td>
     <td id='p10'>10. “Therefore, monks, whatever forms there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not different than self, and neither is present in the other. In this way, whatever feelings … conceptions … volitions … instances of awareness there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not different than self, and neither is present in the other. A noble disciple observes these five acquired aggregates as not self or belonging to self. When they observe them in this way, they will have no attachments to anything in any world. Having no attachments, they will attain their own <em>nirvāṇa</em>: ‘My births have been ended, the religious practice has been established, and the task has been accomplished.’ They themselves will know that I won’t be subject to a later existence.”</td>
   </tr>
   <tr>
