--- a/01_agama/samyukta/01/SA1_53.md
+++ b/01_agama/samyukta/01/SA1_53.md
@@ -11,7 +11,7 @@ next: SA1_54.html
 <h2><a href='index.html'>1. The Aggregates</a></h2>
 
 <table class="trans">
-  <th class='ch'>[6]（二七〇） 無常想</th>
+  <th class='ch'>（二七〇） 無常想</th>
   <th class='en'>53 (270). The Concept of Impermanence</th>
   <tr>
     <td class='ch' title='t99.2.70c2'>如是我聞：一時，佛住舍衛國、祇樹、給孤獨園。</td>
@@ -26,7 +26,7 @@ next: SA1_54.html
     <td id='p3'>3. “Monks, it’s like someone harvesting grass who grabs it with their hand, pulls it up, and shakes the dirt off of it. Then, it withers and dries up when taken after it has grown tall. Thus, monks, when the concept of impermanence is cultivated and cultivated often, it can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.70c10'>「譬如[7]菴羅果著樹，猛風搖條，果悉墮落。如是，無常想修習多修習，能斷一切欲愛、色愛、無色愛、掉、慢、無明。</td>
+    <td class='ch' title='t99.2.70c10'>「譬如菴羅果著樹，猛風搖條，果悉墮落。如是，無常想修習多修習，能斷一切欲愛、色愛、無色愛、掉、慢、無明。</td>
     <td id='p4'>4. “It’s like mango fruits that are still on the tree. When a strong wind blows the branches about, the fruit all fall to the ground. Thus, monks, when the concept of impermanence is cultivated and cultivated often, it can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.</td>
   </tr>
   <tr>
