--- a/01_agama/samyukta/01/SA1_148.md
+++ b/01_agama/samyukta/01/SA1_148.md
@@ -14,48 +14,48 @@ next: SA1_149.html
   <th class='ch'>（三六） 十六得解脫</th>
   <th class='en'>148 (36). Sixteen Who Were Liberated</th>
   <tr>
-    <td class="ch" title='t99.2.8a21'>如是我聞： 一時，佛住摩偷羅國、跋提河側、傘蓋菴羅樹園。</td>
+    <td class='ch' title='t99.2.8a21'>如是我聞： 一時，佛住摩偷羅國、跋提河側、傘蓋菴羅樹園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Umbrella Mango Tree Park on the bank of the Bhadra River in Mathurā.<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.8a22'>爾時，世尊告諸比丘：「住於自洲，住於自依；住於法洲，住於法依；不異洲不異依。</td>
+    <td class='ch' title='t99.2.8a22'>爾時，世尊告諸比丘：「住於自洲，住於自依；住於法洲，住於法依；不異洲不異依。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Stand on your own island and on your own support. Stand on the island of the teaching and the support of the teaching, not on another island or another support.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.8a24'>「比丘！當正觀察，住自洲自依，法洲法依，不異洲不異依。何因生憂悲惱苦？云何有？因何故？何繫著？云何自觀察未生憂悲惱苦而生，已生憂悲惱苦生長增廣？」</td>
-    <td id='p3'>3. “Monks, you should correctly examine this while standing on your own island and on your own support. Stand on the island of the teaching and the support of the teaching, not on another island or another support. What cause gives rise to grief, sorrow, pain, and trouble? How do they exist? What do they cause? Why are they attachments? How do you yourself examine the arising of grief, sorrow, pain, and trouble that have yet to arise and the growth of grief, sorrow, pain, and trouble that have already arisen?”</td>
+    <td class='ch' title='t99.2.8a24'>「比丘！當正觀察，住自洲自依，法洲法依，不異洲不異依。何因生憂悲惱苦？云何有？因何故？何繫著？云何自觀察未生憂悲惱苦而生，已生憂悲惱苦生長增廣？」</td>
+    <td id='p3'>3. “Monks, you should correctly examine this while standing on your own island and on your own support. Stand on the island of the teaching and the support of the teaching, not on another island or another support. What cause gives rise to sorrow, lamentation, pain, and trouble? How do they exist? What do they cause? Why are they attachments? How do you yourself examine the arising of sorrow, lamentation, pain, and trouble that have yet to arise and the growth of sorrow, lamentation, pain, and trouble that have already arisen?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.8a28'>諸比丘白佛：「世尊法根、法眼、法依，唯願為說！諸比丘聞已，當如說奉行。」</td>
+    <td class='ch' title='t99.2.8a28'>諸比丘白佛：「世尊法根、法眼、法依，唯願為說！諸比丘聞已，當如說奉行。」</td>
     <td>The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma support! Please explain this! After listening, the monks will approve of what’s said.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.8a29'>佛告比丘：「諦聽，善思，當為汝說。比丘！有色、因色、繫著色，自觀察未生憂悲惱苦而生，已生而復增長廣大；受、想、行、識亦復如是。比丘！頗有色常、恒、不變易、正住耶？」</td>
-    <td id='p4'>4. The Buddha told the monks, “Listen closely, and consider it well. I will explain it for you. Monks, those things have form, cause form, and they’re tied to form when someone examines for themselves the arising of grief, sorrow, pain, and trouble that have yet to arise and the growth [of grief, sorrow, pain, and trouble] that have already arisen. <em>Feeling, conception, volition, and awareness are likewise.</em> Monks, could it be that form is permanent, eternal, unchanging, and remains the same?”</td>
+    <td class='ch' title='t99.2.8a29'>佛告比丘：「諦聽，善思，當為汝說。比丘！有色、因色、繫著色，自觀察未生憂悲惱苦而生，已生而復增長廣大；受、想、行、識亦復如是。比丘！頗有色常、恒、不變易、正住耶？」</td>
+    <td id='p4'>4. The Buddha told the monks, “Listen closely, and consider it well. I will explain it for you. Monks, those things have form, cause form, and they’re tied to form when someone examines for themselves the arising of sorrow, lamentation, pain, and trouble that have yet to arise and the growth [of sorrow, lamentation, pain, and trouble] that have already arisen. <em>Feeling, conception, volition, and awareness are likewise.</em> Monks, could it be that form is permanent, eternal, unchanging, and remains the same?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.8b4'>答言：「不也，世尊！」</td>
+    <td class='ch' title='t99.2.8b4'>答言：「不也，世尊！」</td>
     <td id='p5'>5. They replied, “No, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.8b5'>佛告比丘：「善哉！善哉！比丘！色是無常。若善男子知色是無常、苦、變易，離欲、滅、寂靜、沒，從本以來，一切色無常、苦、變易法知已，若色因緣生憂悲惱苦斷，彼斷已無所著，不著故安隱樂住，安隱樂住已，名為涅槃。受、想、行、識亦復如是。」</td>
-    <td id='p6'>6. The Buddha told the monks, “Good, monks! Good! Form is impermanent. Suppose good sons know that form is impermanent, painful, and changing. Parting with desire for it, it ceases, becomes tranquil, and disappears. After knowing that all forms have been impermanent, painful, and liable to change since the distant past, those good sons will stop form when it’s the cause and condition giving rise to grief, sorrow, pain, and trouble. Having stopped it, they’ll attach to nothing. Being detached, they’ll live in well-being. Once they live in well-being, that’s called <em>nirvāṇa</em>. <em>Feelings, conceptions, volitions, and awareness are likewise.</em>”</td>
+    <td class='ch' title='t99.2.8b5'>佛告比丘：「善哉！善哉！比丘！色是無常。若善男子知色是無常、苦、變易，離欲、滅、寂靜、沒，從本以來，一切色無常、苦、變易法知已，若色因緣生憂悲惱苦斷，彼斷已無所著，不著故安隱樂住，安隱樂住已，名為涅槃。受、想、行、識亦復如是。」</td>
+    <td id='p6'>6. The Buddha told the monks, “Good, monks! Good! Form is impermanent. Suppose good sons know that form is impermanent, painful, and changing. Parting with desire for it, it ceases, becomes tranquil, and disappears. After knowing that all forms have been impermanent, painful, and liable to change since the distant past, those good sons will stop form when it’s the cause and condition giving rise to sorrow, lamentation, pain, and trouble. Having stopped it, they’ll attach to nothing. Being detached, they’ll live in well-being. Once they live in well-being, that’s called <em>nirvāṇa</em>. <em>Feelings, conceptions, volitions, and awareness are likewise.</em>”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.8b10'>佛說此經時，十六比丘不生諸漏，心得解脫。</td>
+    <td class='ch' title='t99.2.8b10'>佛說此經時，十六比丘不生諸漏，心得解脫。</td>
     <td id='p7'>7. When the Buddha spoke this <em>sūtra</em>, the contaminants didn’t arise in sixteen monks, and their minds were liberated.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.8b11'>佛說此經已，諸比丘聞佛所說，歡喜奉行。</td>
+    <td class='ch' title='t99.2.8b11'>佛說此經已，諸比丘聞佛所說，歡喜奉行。</td>
     <td id='p8'>8. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
 <tr>
-  <td class="ch" title='t99.2.8b13'></td>
+  <td class='ch' title='t99.2.8b13'></td>
   <td class='subheading'>Summary Verse</td>
 </tr>
 <tr>
-  <td class="ch" title='t99.2.8b13'><ul class='verse'>
-    <li>竹園、毘舍離<br/>
+  <td title='t99.2.8b13'><ul class='verse'>
+    <li class='ch'>竹園、毘舍離<br/>
     清淨、正觀察<br/>
     無常、苦、非我<br/>
     五、三、與十六</li>
@@ -74,11 +74,11 @@ next: SA1_149.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 36 in the <cite>Taisho</cite> edition and no. 148 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0008a21" target="_blank">T99.2.8a21-b14</a>). It’s parallel with <a href="https://suttacentral.net/sn22.43" target="_blank">SN 22.43</a>. Note that the analysis of form differs from that of the Pali, and there’s no mention of sixteen monks. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>Umbrella Mango Tree Park on the bank of the Bhadra River in Mathurā</em>. C. 摩偷羅國、跋提河側、傘蓋菴羅樹園. SN 22.43 is placed at Sāvatthī. Aside from Mathurā, a well-known city in western India, these place names are obscure and lack good attestation in other Buddhist sources that I can find. Below is an analysis of each location name in this introduction:<br/>
-<em>Mathurā</em>. C. 摩偷羅國 (EMC. mua-t‘əu-la + “country” = Pr. <em>mathura</em> or <em>madhura</em>), P. <em>madhurā</em>, S. <em>mathurā</em>.<br/>
-<em>on the bank of the Bhadrika River</em>. C. 跋提河側 (EMC. buat-dei + “river bank”). 跋提 was sometimes used to translit. the name of one of the five original disciples, Bhadrika. It could also translit. <em>vati</em>. The river that would have been near Mathurā was the Yamunā. Perhaps this was another name for it, or a minor river in the area. I can find no attestation of this river in other sources.<br/>
-<em>Umbrella Mango Tree Park.</em> C. 傘蓋菴羅樹園 (EMC. “umbrella” + •əm-la (Pr. <em>amra</em>) + “tree” + “park”). There are a number of different grove names for Mathurā. In Theravāda sources, it was called Gundāvana (alternatively spelled Kundā-, Guṇḍā-, and Kuṇḍā-). We also find the name 頻陀林 (EMC. biĕn-da + “forest”) in 大悲經 (<a href="https://cbetaonline.dila.edu.tw/zh/T12n0380_p0971c17" target="_blank">T380.12.971c17</a>), which would appear to translit. <em>binda</em> or <em>vinda</em>. In the <em>Sarvāstivāda Vinaya</em> (<a href="https://cbetaonline.dila.edu.tw/zh/T23n1435_p0451a06" target="_blank">T1435.23451a6</a>), the forest was called 阿波大羅 (EMC. •a-pua-da-la), which is a translit. suggestive of words like S. <em>ānapatra</em>, which could mean umbrella. It would seem to be a detail added later, given the creative variations that we see across the board. [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 36 in the <cite>Taisho</cite> edition and no. 148 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0008a21" target="_blank">T99.2.8a21-b14</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0141a02" target="_blank">Y30.141a2-13</a>). It’s parallel with <a href="https://suttacentral.net/sn22.43" target="_blank">SN 22.43</a>. Note that the analysis of form differs from that of the Pali, and there’s no mention of sixteen monks. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>Umbrella Mango Tree Park on the bank of the Bhadra River in Mathurā</em>. C. <span class="ch">摩偷羅國、跋提河側、傘蓋菴羅樹園</span>. SN 22.43 is placed at Sāvatthī. Aside from Mathurā, a well-known city in western India, these place names are obscure and lack good attestation in other Buddhist sources that I can find. Below is an analysis of each location name in this introduction:</p>
+<p><em>Mathurā</em>. C. <span class="ch">摩偷羅國</span> (EMC. mua-t‘əu-la + “country” = Pr. <em>mathura</em> or <em>madhura</em>), P. <em>madhurā</em>, S. <em>mathurā</em>.</p>
+<p><em>on the bank of the Bhadrika River</em>. C. <span class="ch">跋提河側</span> (EMC. buat-dei + “river bank”). <span class="ch">跋提</span> was sometimes used to translit. the name of one of the five original disciples, Bhadrika. It could also translit. <em>vati</em>. The river that would have been near Mathurā was the Yamunā. Perhaps this was another name for it, or a minor river in the area. I can find no attestation of this river in other sources.</p>
+<p><em>Umbrella Mango Tree Park.</em> C. <span class="ch">傘蓋菴羅樹園</span> (EMC. “umbrella” + •əm-la (Pr. <em>amra</em>) + “tree” + “park”). There are a number of different grove names for Mathurā. In Theravada sources, it was called Gundāvana (alternatively spelled Kundā-, Guṇḍā-, and Kuṇḍā-). We also find the name <span class="ch">頻陀林</span> (EMC. biĕn-da + “forest”) in <span class="ch">大悲經</span> (<a href="https://cbetaonline.dila.edu.tw/zh/T12n0380_p0971c17" target="_blank">T380.12.971c17</a>), which would appear to translit. <em>binda</em> or <em>vinda</em>. In the <em>Sarvāstivāda Vinaya</em> (<a href="https://cbetaonline.dila.edu.tw/zh/T23n1435_p0451a06" target="_blank">T1435.23451a6</a>), the forest was called <span class="ch">阿波大羅</span> (EMC. •a-pua-da-la), which is a translit. suggestive of words like S. <em>ānapatra</em>, which could mean umbrella. It would seem to be a detail added later, given the creative variations that we see across the board. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
