--- a/01_agama/samyukta/01/SA1_150.md
+++ b/01_agama/samyukta/01/SA1_150.md
@@ -14,27 +14,27 @@ next: SA1_151.html
   <th class='ch'>（三八） 卑下</th>
   <th class='en'>150 (38). Lowly</th>
   <tr>
-    <td class="ch" title='t99.2.8c8'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.8c8'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.8c9'>爾時，世尊告諸比丘：「世人為卑下業，種種求財活命，而得巨富，世人皆知。如世人之所知，我亦如是說。所以者何？莫令我異於世人。</td>
+    <td class='ch' title='t99.2.8c9'>爾時，世尊告諸比丘：「世人為卑下業，種種求財活命，而得巨富，世人皆知。如世人之所知，我亦如是說。所以者何？莫令我異於世人。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Worldly people of lowly occupations search in various ways for wealth and livelihood, and they obtain their fortunes. Worldly people all know this. According to how something is known to worldly people, I also thus speak. Why is that? It doesn’t set me apart from worldly people.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.8c12'>「諸比丘，譬如一器，有一處人，名為揵茨。 有名鉢，有名匕匕羅，有名遮留，有名毘悉多，有名婆闍那，有名薩牢。 如彼所知，我亦如是說。 所以者何？ 莫令我異於世人故。</td>
+    <td class='ch' title='t99.2.8c12'>「諸比丘，譬如一器，有一處人，名為揵茨。 有名鉢，有名匕匕羅，有名遮留，有名毘悉多，有名婆闍那，有名薩牢。 如彼所知，我亦如是說。 所以者何？ 莫令我異於世人故。</td>
     <td id='p3'>3. “Monks, take for example a vessel in a person’s dwelling that’s called a <em>ghaṭī</em>. Some call it a <em>pātra</em>, some call it a <em>pipīla</em>, some call it a <em>jvāla</em>, some call it a <em>vistha</em>, some call it a <em>vacana</em>, and some call it a <em>śarāva</em>.<sup id="ref2"><a href="#n2">2</a></sup> However they know it, I also thus speak. Why is that? It’s so I’m not set apart from worldly people.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.8c16'>「如是，比丘，有世間法，我自知自覺，為人分別演說顯示，知見而說，世間盲無目者不知不見；世間盲無目者不知不見，我其如之何！</td>
+    <td class='ch' title='t99.2.8c16'>「如是，比丘，有世間法，我自知自覺，為人分別演說顯示，知見而說，世間盲無目者不知不見；世間盲無目者不知不見，我其如之何！</td>
     <td id='p4'>4. “Thus, monks, there’s a mundane way of the world that I myself know and realize and that I discern, explain, and demonstrate for people. Knowing and seeing it, I say: ‘The world is blind, without eyes, and doesn’t know or see it.’ How am I like the world that’s blind, without eyes, and doesn’t know or see it?</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.8c19'>「比丘，云何世間世間法，我自知自覺，乃至不知不見？色無常、苦、變易法，是為世間世間法；受、想、行、識，無常、苦、變易法，是世間世間法。比丘，是名世間世間法，我自知自見，乃至盲無目者不知不見，其如之何！」</td>
+    <td class='ch' title='t99.2.8c19'>「比丘，云何世間世間法，我自知自覺，乃至不知不見？色無常、苦、變易法，是為世間世間法；受、想、行、識，無常、苦、變易法，是世間世間法。比丘，是名世間世間法，我自知自見，乃至盲無目者不知不見，其如之何！」</td>
     <td id='p5'>5. “Monks, what is the mundane way of the world that I know and realize … doesn’t know or see it? Form is impermanent, painful, and liable to change. This is the mundane way of the world. Feeling … conception … volition … consciousness is impermanent, painful, and liable to change. This is the mundane way of the world. Monks, this is called the mundane way of the world that I know and see … How am I like those who are blind, without eyes, and don’t know or see it?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.8c24'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td class='ch' title='t99.2.8c24'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
     <td id='p6'>6. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
 </table>
@@ -44,15 +44,15 @@ next: SA1_151.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 38 in the <cite>Taisho</cite> edition and no. 150 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0008c08" target="_blank">T99.2.8c8-25</a>). It’s parallel with a passage in <a href="https://suttacentral.net/mn139" target="_blank">MN 139</a> on local dialects, <a href="SA1_149.html" target="_blank">SĀ 1.149</a>, and <a href="https://suttacentral.net/sn22.94" target="_blank">SN 22.94</a>. [<a href="#ref1">back</a>]</li>
-<li id="n2">Some of these Indic names are obscure transliterations in Chinese. I’ve consulted suggestions in a Buddhist Chinese glossary (T2130 翻梵語), which reads the transliterations as S., but I notice that the parallel passage in MN 139 appears to be a better guide for reconstructing several of these terms. A couple are still a mystery to me.<br/>
-<em>ghaṭī.</em> C. 揵茨 (EMC. gɪɛn-dzii = G. <em>ghaḍi</em> or <em>gaḍ̱i</em>), P. <em>ghaṭī</em>, S. <em>ghaṭī</em>. This seems a Pr. form for the name of a large water jar.<br/>
-<em>pātra</em>. C. 鉢 (EMC. puat = G. <em>pat[ra]</em>), P. <em>patta</em>, S. <em>pātra</em>. This term became the C. translation of the Buddhist alms bowl.<br/>
-<em>pipīla</em>. C. 匕匕羅 (EMC. pii-pii-la = Pr. <em>pipila</em>?). S. <em>pipīla</em>? This is the S. name of an ant. The Chinese glossary (<a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p1032c16" target="_blank">T2130.54.1032c16</a>) claims the translit. means a flying insect. It may have been a word derived from an equivalent of P. <em>pivati</em> that meant something to do with drinking (cups, bowls, etc.). In MN 139, we see the term P. <em>pisīla</em> instead, which differs from the C. translit. only in the middle consonant. I lean towards the translit. being a corruption of <em>pisīla</em> or an equiv. word.<br/>
-<em>jvāla</em>. C. 遮留 (EMC. tʃɪă-lɪəu = Pr. <em>chalu</em> or <em>charu</em>?). The Chinese glossary (<a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p0987a12" target="_blank">T2130.54.987a12</a>) says that the translit. means “light” (光). S. <em>jvāla</em> seems closest to this meaning for the translit.; however, <em>rucā</em> is another possibility if the characters were transposed. Neither option seems appropriate for the name of a vessel. I’ve adopted the S. reading indicated by the C. glossary for lack of a better option.<br/>
-<em>vistha</em>. C. 毘悉多 (EMC. bii-siĕt-ta = G. <em>*vista</em>?), P. <em>vittha</em>, S. <em>vista</em> or <em>vistha</em>. The Chinese glossary (<a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p0987a13" target="_blank">T2130.54.987a13</a>) claims that this is the same as a more well-known translit. (婆私吒) for S. <em>vasiṣṭha</em> and translates it as “highest” (最勝). However, the passage in MN 139 has P. <em>vitta</em>, which means possessions or property in general. On the other hand, P. <em>vittha</em> means a drinking bowl, and this appears to be most likely thing for this passage. I’ve adopted the S. equivalent for this last possibility.<br/>
-<em>vacana</em>. C. 婆闍那 (EMC. bua-ʒɪă(to)-na = G. <em>vacana</em> or <em>vatona</em>?), S. <em>vacana</em>. The glossary (<a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p0987a14" target="_blank">T2130.54.987a14</a>) offers an alternative translit. (婆遮那) and translates the term as “speech” (語). There is an alt. pronunciation of 闍 as <em>to</em>. I haven’t discovered a good Indic equivalent for either translit. that was name of a vessel. So, again, I have simply adopted the S. equiv. of the glossary’s suggestion.<br/>
-<em>śarāva</em>. C. 薩牢 (EMC. sat-lau = <em>sara</em> or <em>saro</em>?), P. <em>sarāva</em>, S. <em>śarāva</em>. In MN 139, one of the items in the list is <em>sarāva</em>, meaning a “plate, cup, saucer” depending on the source. I’ve adopted its S. equivalent. [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 38 in the <cite>Taisho</cite> edition and no. 150 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0008c08" target="_blank">T99.2.8c8-25</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0144a11" target="_blank">Y30.144a11-5a5</a>). It’s parallel with a passage in <a href="https://suttacentral.net/mn139" target="_blank">MN 139</a> on local dialects, <a href="SA1_149.html" target="_blank">SĀ 1.149</a>, and <a href="https://suttacentral.net/sn22.94" target="_blank">SN 22.94</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p>These Indic names are all obscure transliterations in Chinese. I’ve consulted suggestions in a Buddhist Chinese glossary (T2130 <span class="ch">翻梵語</span>), which reads the transliterations as S., but I notice that the parallel passage in MN 139 appears to be a better guide for reconstructing several of these terms. A couple are still a mystery to me.</p>
+<p><em>ghaṭī.</em> C. <span class="ch">揵茨</span> (EMC. gɪɛn-dzii = G. <em>ghaḍi</em> or <em>gaḍ̱i</em>), P. <em>ghaṭī</em>, S. <em>ghaṭī</em>. This seems a Pr. form for the name for a large water jar.</p>
+<p><em>pātra</em>. C. <span class="ch">鉢</span> (EMC. puat = G. <em>pat[ra]</em>), P. <em>patta</em>, S. <em>pātra</em>. This term became the C. translation of the Buddhist alms bowl.</p>
+<p><em>pipīla</em>. C. <span class="ch">匕匕羅</span> (EMC. pii-pii-la = Pr. <em>pipila</em>?). S. <em>pipīla</em>? This is the S. name of an ant. The Chinese glossary (<a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p1032c16" target="_blank">T2130.54.1032c16</a>) claims the translit. means a flying insect. It may have been a word derived from an equivalent of P. <em>pivati</em> that meant something to do with drinking (cups, bowls, etc.). In MN 139, we see the term P. <em>pisīla</em> instead, which seems to be a dialect variant of P. <em>patta</em> and differs from the C. translit. only in the middle consonant. I lean towards the translit. being a corruption of <em>pisīla</em> or an equiv. word.</p>
+<p><em>jvāla</em>. C. <span class="ch">遮留</span> (EMC. tʃɪă-lɪəu = Pr. <em>chalu</em> or <em>charu</em>?). The Chinese glossary (<a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p0987a12" target="_blank">T2130.54.987a12</a>) says that the translit. means “light” (<span class="ch">光</span>). S. <em>jvāla</em> seems closest to this meaning for the translit.; however, <em>rucā</em> is another possibility if the characters were transposed. Neither option seems appropriate for the name of a vessel. I’ve adopted the S. reading indicated by the C. glossary for lack of a better option.</p>
+<p><em>vistha</em>. C. <span class="ch">毘悉多</span> (EMC. bii-siĕt-ta = G. <em>*vista</em>?), P. <em>vittha</em>, S. <em>vista</em> or <em>vistha</em>. The Chinese glossary (<a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p0987a13" target="_blank">T2130.54.987a13</a>) claims that this is the same as a more well-known translit. (<span class="ch">婆私吒</span>) for S. <em>vasiṣṭha</em> and translates it as “highest” (<span class="ch">最勝</span>). However, the passage in MN 139 has P. <em>vitta</em>, which means possessions or property in general. On the other hand, P. <em>vittha</em> means a drinking bowl, and this appear most likely. I’ve adopted the S. equivalent for this last possibility.</p>
+<p><em>vacana</em>. C. <span class="ch">婆闍那</span> (EMC. bua-ʒɪă(to)-na = G. <em>vacana</em> or <em>vatona</em>?), S. <em>vacana</em>. The glossary (<a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p0987a14" target="_blank">T2130.54.987a14</a>) offers an alternative transliteration (<span class="ch">婆遮那</span>) and translates the term as “speech” (<span class="ch">語</span>). There is an alt. pronunciation of <span class="ch">闍</span> as <em>to</em>. I haven’t discovered a good Indic equivalent for either translit. that may have been a common name of a vessel. So, again, I have simply adopted the S. equiv. of the glossary’s suggestion.</p>
+<p><em>śarāva</em>. C. <span class="ch">薩牢</span> (EMC. sat-lau = <em>sara</em> or <em>saro</em>?), P. <em>sarāva</em>, S. <em>śarāva</em>. In MN 139, one of the items in the list is <em>sarāva</em>, meaning a “plate, cup, saucer” depending on the source. I’ve adopted its S. equivalent. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
