--- a/01_agama/samyukta/01/SA1_47.md
+++ b/01_agama/samyukta/01/SA1_47.md
@@ -18,11 +18,11 @@ next: SA1_48.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.67c5'>[13]爾時，有異比丘於禪中思惟，作是念：「頗有色常、恒、不變易、正住耶？如是受、想、行、識，常、恒、不變易、正住耶？」</td>
+    <td class='ch' title='t99.2.67c5'>爾時，有異比丘於禪中思惟，作是念：「頗有色常、恒、不變易、正住耶？如是受、想、行、識，常、恒、不變易、正住耶？」</td>
     <td id='p2'>2. It was then that a certain monk had this thought while contemplating in meditation, “Isn’t there a form that remains permanent, eternal, unchanging, and the same?<sup id="ref2"><a href="#n2">2</a></sup> … feeling … conception … volition … awareness that remains permanent, eternal, unchanging, and the same?”</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.67c7'>是比丘晡時從禪起，往詣佛所，頭面禮足，却住一面，白佛言：「世尊！我於禪中思惟，作是念：『頗有色常、恒、不變易、正住耶？如是受、想、行、識，常、恒、不變易、正住耶？』今[14]日世尊：『頗有色常、恒、不變易、正住耶？頗有受、想、行、識，常、恒、不變易、正住耶？』」</td>
+    <td class='ch' title='t99.2.67c7'>是比丘晡時從禪起，往詣佛所，頭面禮足，却住一面，白佛言：「世尊！我於禪中思惟，作是念：『頗有色常、恒、不變易、正住耶？如是受、想、行、識，常、恒、不變易、正住耶？』今日世尊：『頗有色常、恒、不變易、正住耶？頗有受、想、行、識，常、恒、不變易、正住耶？』」</td>
     <td id='p3'>3. This monk rose from his meditation in the afternoon and went to the Buddha. He bowed his head at the Buddha’s feet and withdrew to stand to one side. He then said to the Buddha, “Bhagavān, I was contemplating in meditation and had this thought, ‘Isn’t there a form that remains permanent, eternal, unchanging, and the same? … feeling … conception … volition … awareness that remains permanent, eternal, unchanging, and the same?’ Now, I ask the Bhagavān, ‘Isn’t there a form that remains permanent, eternal, unchanging, and the same? … feeling … conception … volition … awareness that remains permanent, eternal, unchanging, and the same?’”</td>
   </tr>
   <tr>
@@ -38,7 +38,7 @@ next: SA1_48.html
     <td id='p5'>5. “Monk, I can’t find even this small amount of earth [that remains always the same]. If I could find it, then something would remain permanent, eternal, unchanging, and the same.”</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.67c16'>佛告比丘：「我自憶宿命，長夜修福，得諸勝妙可愛果報之事。曾於七年中，修習慈心，經七劫成壞，不還此世。七劫壞時生光音天，七劫成時還生梵世，空宮殿中作大梵王，無勝、無上，領千世界。從是[15]已後，復三十六反，作天帝釋。</td>
+    <td class='ch' title='t99.2.67c16'>佛告比丘：「我自憶宿命，長夜修福，得諸勝妙可愛果報之事。曾於七年中，修習慈心，經七劫成壞，不還此世。七劫壞時生光音天，七劫成時還生梵世，空宮殿中作大梵王，無勝、無上，領千世界。從是已後，復三十六反，作天帝釋。</td>
     <td id='p6'>6. The Buddha told the monk, “I myself recall a past life during which I cultivated merits for a long night and attained greater, sublime, and delightful rewards. I once cultivated kind thoughts for seven years. For seven eons of formation and destruction, I didn’t return to this world. During those seven eons of destruction, I was born in the Ābhāsvara Heaven. During those seven eons of formation, I was reborn in the Brahma world. I became the Great King Brahmā in an empty palace, who was the unequalled and unsurpassed ruler of a thousand worlds. After that, I was born as Lord Śakra thirty-six times.</td>
   </tr>
   <tr>
@@ -50,15 +50,15 @@ next: SA1_48.html
     <td id='p8'>8. “It’s the way of anointed kings that they have 84,000 <em>nāga</em> elephants decorated with many jeweled ornaments. They’re covered with jeweled netting and carry jeweled banners. Their leader is an elephant king named Upavasatha.<sup id="ref5"><a href="#n5">5</a></sup> They would gather in front of the palace twice a day, in the morning and afternoon. At the time, I thought, ‘This great herd of elephants comes here twice a day, trampling innumerable living things to death. I would rather have 42,000 elephants come once per century instead.’ Then, they did as I wished. 42,000 of those 84,000 elephants would come once a century.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.68a3'>「灌頂王法復有八萬四千匹馬，亦[1]以純金為諸乘具，金網覆上，[2]婆羅馬王為其導首。</td>
+    <td class='ch' title='t99.2.68a3'>「灌頂王法復有八萬四千匹馬，亦以純金為諸乘具，金網覆上，婆羅馬王為其導首。</td>
     <td id='p9'>9. “Another rule of anointed kings is that they have 84,000 horse teams with chariots made of pure gold and covered with gold netting. Their leader is the horse king named Vālaha.<sup id="ref6"><a href="#n6">6</a></sup></td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.68a5'>「灌頂王法有八萬四千四種寶車，所謂金車、銀車、琉璃車、頗梨車，師子、虎、豹皮、雜色欽婆羅以為覆[3]襯，䟦求毗闍耶難提音聲之車為其導首。</td>
+    <td class='ch' title='t99.2.68a5'>「灌頂王法有八萬四千四種寶車，所謂金車、銀車、琉璃車、頗梨車，師子、虎、豹皮、雜色欽婆羅以為覆襯，䟦求毗闍耶難提音聲之車為其導首。</td>
     <td id='p10'>10. “Another rule of anointed kings is that they have 84,000 chariots made of four treasures: gold chariots, silver chariots, beryl chariots, and crystal chariots. They were covered with cushions of lion, tiger, and leopard skin as well as variegated wool fabric.<sup id="ref7"><a href="#n7">7</a></sup> Their leader was the chariot called Vaijayantaghoṣa.<sup id="ref8"><a href="#n8">8</a></sup></td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.68a8'>「灌頂王法領八萬四千城，安隱豐樂，人民熾盛，[4]拘舍婆提城而為上首。</td>
+    <td class='ch' title='t99.2.68a8'>「灌頂王法領八萬四千城，安隱豐樂，人民熾盛，拘舍婆提城而為上首。</td>
     <td id='p11'>11. “Another rule of anointed kings is that they govern 84,000 cities, which are secure, bountiful, pleasant, and have flourishing populations. Their leader is the city Kuśavatī.<sup id="ref9"><a href="#n9">9</a></sup></td>
   </tr>
   <tr>
@@ -78,7 +78,7 @@ next: SA1_48.html
     <td id='p15'>15. “Furthermore, monk, another rule of anointed kings is that they have 84,000 beautiful women who are warrior women or resemble warrior women, to say nothing of other women.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.68a18'>「復次，比丘！灌頂王法有八萬四千[10]飲食，眾味具足。比丘！八萬四千玉女中，唯以一人以為給侍；八萬四千寶衣，唯著一衣；八萬四千寶床，唯臥一床；八萬四千宮殿，唯處一殿；八萬四千城，唯居一城，名拘舍婆提；八萬四千寶車，唯乘一車，名[11]毘闍耶難提瞿沙，出城遊觀；八萬四千寶馬，唯乘一馬，名婆羅訶，毛尾紺色；八萬四千龍象，唯乘一象，名[12]布薩陀，出城遊觀。</td>
+    <td class='ch' title='t99.2.68a18'>「復次，比丘！灌頂王法有八萬四千飲食，眾味具足。比丘！八萬四千玉女中，唯以一人以為給侍；八萬四千寶衣，唯著一衣；八萬四千寶床，唯臥一床；八萬四千宮殿，唯處一殿；八萬四千城，唯居一城，名拘舍婆提；八萬四千寶車，唯乘一車，名毘闍耶難提瞿沙，出城遊觀；八萬四千寶馬，唯乘一馬，名婆羅訶，毛尾紺色；八萬四千龍象，唯乘一象，名布薩陀，出城遊觀。</td>
     <td id='p16'>16. “Furthermore, monk, another rule of anointed kings is that they have 84,000 meals replete with many flavors. Monk, among the 84,000 beautiful women, there’s only one of them who attends to the king. Of his 84,000 treasure clothes, there’s only one that he wears. Of the 84,000 treasure beds, there’s only one that he lies on. Of the 84,000 palaces, there’s only one hall where he presides. Of the 84,000 cities, there’s only one where he lives, which is called Kuśavatī. Of the 84,000 treasure chariots, there’s only one that he rides when he leaves the city to go touring, which is called Vaijayantaghoṣa. Of the 84,000 treasure horses, there’s only one horse that he rides, which is named Vālaha and has a crimson-colored mane and tail. Of the 84,000 <em>nāga</em> elephants, there’s only one elephant that he rides when he leaves the city to go touring, which is named Upavasatha.</td>
   </tr>
   <tr>
@@ -98,7 +98,7 @@ next: SA1_48.html
     <td id='p19'>19. “If something is impermanent, is that painful?”</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.68b6'>比丘白佛[13]言：「是苦。世尊！」</td>
+    <td class='ch' title='t99.2.68b6'>比丘白佛言：「是苦。世尊！」</td>
     <td>The monk said to the Buddha, “It’s painful, Bhagavān.”</td>
   </tr>
   <tr>
@@ -146,7 +146,7 @@ next: SA1_48.html
     <td id='p26'>26. That monk celebrated and rejoiced after hearing what the Buddha taught. He then bowed and departed. Continuously mindful of that instruction based on the simile of the clod of dirt, he went alone to a quiet place, diligently contemplated it, and lived earnestly. Having lived earnestly, [he thought,] “A good son leaves home, cuts off his hair and beard, [puts on the Dharma robes,] believes at home in being homeless, and leaves home to train on the path. That’s the way he reaches the ultimate and unsurpassed religious practice. He’ll himself realize in the present life: ‘My births have been ended, the religious practice has been established, and the task has been accomplished.’ He himself will know he won’t be subject to a later existence.”</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.68b27'>時，彼尊者亦自知法，[14]心得解脫，成阿羅漢。</td>
+    <td class='ch' title='t99.2.68b27'>時，彼尊者亦自知法，心得解脫，成阿羅漢。</td>
     <td id='p27'>27. That venerable one also knew the Dharma himself. His mind was liberated, and he became an <em>arhat</em>.</td>
   </tr>
 </table>
